docs: Update docs to include new Next.js starter (#4060)

--- a/docs/docs/guides/storefront/storefront-starters/index.mdx
+++ b/docs/docs/guides/storefront/storefront-starters/index.mdx
@@ -2,9 +2,17 @@
 title: "Storefront Starters"
 ---
 
-Since building an entire Storefront from scratch can be a daunting task, we have prepared a few starter projects that you can use as a base for your own storefront.
+## Next.js Storefront Starter
 
-These starters provide basic functionality including:
+The Vendure team has created an official Next.js Storefront Starter that you can use as a base for your own storefront.
+
+:::info
+From v3.5.2 onwards, new Vendure projects created using the `@vendure/create` tool can choose to include this Next.js Storefront Starter by default.
+:::
+
+![Next.js Storefront](./next-storefront.webp)
+
+This starter includes all basic functionality out of the box, including:
 
 - Product listing
 - Product details
@@ -14,13 +22,19 @@ These starters provide basic functionality including:
 - Account management
 - Styling with Tailwind
 
-The idea is that you clone the starter project and then customize it to your needs.
+- 🔗 [next.vendure.io](https://next.vendure.io/)
+- 💻 [github.com/vendure-ecommerce/storefront-nextjs-starter](https://github.com/vendure-ecommerce/nextjs-starter-vendure)
 
 :::note
 Prefer to build your own solution? Follow the rest of the guides in this section to learn how to build a Storefront from scratch.
 :::
 
-## Remix Storefront
+## Community-maintained Starters
+
+The Next.js starter is the official Vendure Storefront starter, but there are also several further starters that were originally created
+as demos by the Vendure team, and are now community-maintained.
+
+### Remix Storefront
 
 - 🔗 [remix-storefront.vendure.io](https://remix-storefront.vendure.io/)
 - 💻 [github.com/vendure-ecommerce/storefront-remix-starter](https://github.com/vendure-ecommerce/storefront-remix-starter)
@@ -31,7 +45,7 @@ Our official Remix Storefront starter provides you with a lightning-fast, modern
 
 ![Remix Storefront](./remix-storefront.webp)
 
-## Qwik Storefront
+### Qwik Storefront
 
 - 🔗 [qwik-storefront.vendure.io](https://qwik-storefront.vendure.io/)
 - 💻 [github.com/vendure-ecommerce/storefront-qwik-starter](https://github.com/vendure-ecommerce/storefront-qwik-starter)
@@ -42,7 +56,7 @@ Our official Qwik Storefront starter provides you with a lightning-fast, modern 
 
 ![Qwik Storefront](./qwik-storefront.webp)
 
-## Angular Storefront
+### Angular Storefront
 
 - 🔗 [angular-storefront.vendure.io](https://angular-storefront.vendure.io/)
 - 💻 [github.com/vendure-ecommerce/storefront-angular-starter](https://github.com/vendure-ecommerce/storefront-angular-starter)
